[package]
name = "snipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
chrono = "0.4"
regex = "1.5.5"

[dependencies.tokio]
version = "1.0"
features = [
    "macros",
    "rt-multi-thread",
    "parking_lot"
]

[dependencies.sqlx]
version = "0.5.11"
features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "offline"
]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "builder",
    "client",
    "cache",
    "collector",
    "gateway",
    "http",
    "model",
    "rustls_backend",
]

[profile.release]
strip = true
lto = true
